...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KkF-Ph-85z" userLabel="ButtonsContainer">
                                <rect key="frame" x="924" y="0.0" width="100" height="100"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ifa-h7-T8I">
                                        <rect key="frame" x="55" y="15" width="30" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SettingsButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="hYG-uG-xgh"/>
                                            <constraint firstAttribute="width" constant="30" id="qzJ-wO-t2L"/>
                                        </constraints>
                                        <state key="normal">
                                            <color key="titleShadowColor" systemColor="labelColor"/>
...
                                        <connections>
                                            <action selector="gearButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F1l-75-yoy"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="coU-E5-Qvx">
                                        <rect key="frame" x="15" y="15" width="30" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SaveFilesButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="rfG-j2-0qP"/>
                                            <constraint firstAttribute="width" constant="30" id="yUb-G4-yUt"/>
                                        </constraints>
                                        <state key="normal">
                                            <imageReference key="image" image="folder.fill" catalog="system" symbolScale="large"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dM6-yY-UQo">
                                <rect key="frame" x="20" y="6.5" width="45" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="DeleteButton"/>
                                <state key="normal" title="Delete">
                                    <color key="titleColor" systemColor="systemRedColor"/>
                                </state>
                                <connections>
                                    <action selector="deleteButtonPressed:" destination="KRW-Dp-kSv" eventType="touchUpInside" id="aVA-ja-qZi"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1GL-Gr-rS1">
                                <rect key="frame" x="650" y="6.5" width="34" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="LoadButton"/>
                                <state key="normal" title="Load"/>
                                <connections>
                                    <action selector="loadButtonPressed:" destination="KRW-Dp-kSv" eventType="touchUpInside" id="dnJ-Oh-6cW"/>
                                </connections>
                            </button>
                        </subviews>
...
                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V1K-fl-3A1">
                                <rect key="frame" x="647" y="6.5" width="37" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="SettingsDoneButton"/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <action selector="doneButtonPressed:" destination="DoN-VN-dz5" eventType="touchUpInside" id="VXX-wv-w0o"/>
                                </connections>
                            </button>
                        </subviews>
...
